# PBD

./: .gitignore  CMakeLists.txt  README.md  design.md  rigid_bodies.md
cmake/: postconfig.cmake  preconfig.cmake
include/pbd/: ConstraintList.hpp  Engine.hpp  Engine2D.hpp  Engine3D.hpp  Types.hpp  pbd.hpp
include/pbd/collide/: Particle.hpp  Plane.hpp
include/pbd/common/: ConstraintRef.hpp  MDSpan.hpp  RotationExtractor.hpp  Span.hpp  Transform.hpp  TransformTracker.hpp  Types.hpp  Utils.hpp
include/pbd/constraint/: Bend.hpp  CollideParticle.hpp  CollidePlane.hpp  CollideTriangle.hpp  Distance.hpp  IsoBend.hpp  NHTetraVolume.hpp  TetraVolume.hpp  Utils.hpp
include/pbd/engine/: BodyList.hpp  ConstraintList.hpp  ConstraintRef.hpp  Engine.hpp  ExtractedRotation.hpp  ManagedEngine.hpp  ObjectMap.hpp  ObjectPrefab.hpp  ObjectQueue.hpp  Particle.hpp  ParticleList.hpp  Particles.hpp  RigidBody.hpp  TrackerList.hpp
include/pbd/engine/body/: RigidBody.hpp  Utils.hpp
include/pbd/engine/body/constraint/: HingeJoint.hpp  SphereJoint.hpp
include/pbd/engine/collide/: Particle.hpp  Plane.hpp  PlaneCompliant.hpp
include/pbd/engine/collider/: AllColliders.hpp  BodyBodyCollision.hpp  BodyParticleCollision.hpp  Collider.hpp  ColliderList.hpp  ColliderType.hpp  Collision.hpp  ParticleParticleCollision.hpp  WorldBoundsCollision.hpp
include/pbd/engine/collider/particle/: Particle.hpp  Plane.hpp  Triangle.hpp
include/pbd/engine/constraint/: AllConstraints.hpp  ConstraintList.hpp  ConstraintMeta.hpp  ConstraintRef.hpp  ConstraintType.hpp  Distance.hpp  NHTetraVolume.hpp  TetraVolume.hpp
include/pbd/engine/constraint/body/: Align.hpp  AttachBody.hpp  AttachParticle.hpp  Fixed.hpp  HingeJoint.hpp  PrismaticJoint.hpp  SphereJoint.hpp  Utils.hpp
include/pbd/engine/constraint/particle/: Distance.hpp  NHTetra.hpp  Tetra.hpp
include/pbd/engine/particle/: Particle.hpp
include/pbd/engine/particle/collide/: Triangle.hpp
include/pbd/engine/particle/constraint/: Distance.hpp  NHTetraVolume.hpp  TetraVolume.hpp
include/pbd/hash/: BBox.hpp  Table.hpp
include/pbd/prefab/: Prefab.hpp  PrefabConstraints.hpp  PrefabDatabase.hpp  PrefabParticle.hpp  PrefabTracker.hpp
src/: Engine.cpp  Engine3D.cpp  ExtractedRotation.cpp
src/collide/: Particle.cpp  Plane.cpp
src/common/: ConstraintList.cpp  ConstraintRef.cpp  RotationExtractor.cpp  TransformTracker.cpp  Types.cpp  Utils.cpp
src/constraint/: CollideParticle.cpp  CollidePlane.cpp  Distance.cpp  NHTetraVolume.cpp  TetraVolume.cpp  Utils.cpp
src/engine/: BodyList.cpp  ConstraintList.cpp  ConstraintRef.cpp  Engine.cpp  ExtractedRotation.cpp  ManagedEngine.cpp  ObjectMap.cpp  ObjectQueue.cpp  ParticleList.cpp  Particles.cpp  RigidBody.cpp  TrackerList.cpp
src/engine/body/: RigidBody.cpp  Utils.cpp
src/engine/body/constraint/: Align.cpp  HingeJoint.cpp  SphereJoint.cpp
src/engine/collide/: Particle.cpp  Plane.cpp
src/engine/collider/: BodyParticleCollide.cpp  Collider.cpp  ColliderType.cpp
src/engine/collider/body/: CapsuleCapsule.cpp  CapsuleCylinder.cpp  CapsuleOBB.cpp  CapsuleSphere.cpp  CylinderCylinder.cpp  CylinderOBB.cpp  CylinderSphere.cpp  OBBOBB.cpp  OBBSphere.cpp  SphereSphere.cpp
src/engine/collider/bounds/: BoundsCapsule.cpp  BoundsParticle.cpp  BoundsSphere.cpp
src/engine/collider/particle/: Particle.cpp  Plane.cpp
src/engine/constraint/: ConstraintList.cpp  ConstraintRef.cpp  ConstraintType.cpp  Distance.cpp  NHTetraVolume.cpp  TetraVolume.cpp
src/engine/constraint/body/: Align.cpp  AttachBody.cpp  AttachParticle.cpp  Fixed.cpp  HingeJoint.cpp  PrismaticJoint.cpp  SphereJoint.cpp  Utils.cpp
src/engine/constraint/particle/: Distance.cpp  NHTetraVolume.cpp  TetraVolume.cpp
src/engine/particle/collide/: Particle.cpp  Plane.cpp
src/engine/particle/constraint/: Distance.cpp  NHTetraVolume.cpp  TetraVolume.cpp
src/hash/: Table.cpp
src/prefab/: Prefab.cpp  PrefabDatabase.cpp  PrefabParticle.cpp  PrefabTracker.cpp
test/: CMakeLists.txt
test/basic/: CMakeLists.txt  formatting.hpp  mdspan.cpp  rigid_body_corrections.cpp  rigid_body_transform.cpp  sdf.cpp  span.cpp
test/basic/collisions/: obb_obb.cpp
test/godot/: CMakeLists.txt  todo.txt
test/godot/godot_pbd_project/: .gitignore  Capsule.gd  Capsule.tscn  PauseHandler.gd  Test3D.gd  Test3D.tscn  project.godot
test/godot/godot_pbd_project/meshes/: icosphere.glb  icosphere.glb.import  icosphere.tres  monkey.glb  monkey.glb.import
test/godot/godot_pbd_project/textures/: concrete.jpg.import
test/godot/include/: EngineNode.hpp  ManagedEngineNode.hpp  PrefabRef.hpp
test/godot/src/: EngineNode.cpp  ManagedEngineNode.cpp  PrefabRef.cpp  gdnativelib.cpp
